--- a/assets/odontograma/prepros-6.config
+++ b/assets/odontograma/prepros-6.config
@@ -14,8 +14,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "pug",
-      "scss"
+      "scss",
+      "pug"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
