--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ assets/uploads/placas/*.png
 assets/uploads/placas/thumbs/*.jpg
 assets/uploads/placas/thumbs/*.jpeg
 assets/uploads/placas/thumbs/*.png
+
+assets/img/odontogramas/*
+!assets/img/odontogramas/*.txt
