--- a/assets/odontograma/prepros-6.config
+++ b/assets/odontograma/prepros-6.config
@@ -15,7 +15,8 @@
   "fileTree": {
     "expandedDirs": [
       "scss",
-      "pug"
+      "pug",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
